8078563: Restrict reduction optimization

Reviewed-by: kvn, twisti